[project]
name = "escpos-python"
version = "0.1.0"
description = "ESC/POS receipt printing library in pure Python"
authors = [
    { name="Your Name", email="you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourname/escpos-python"

[tool.flit.sdist]
include = ["src", "README.md", "LICENSE"]

[tool.flit.module]
name = "src"
